--- a/src/sass/style.personal-cabinet.scss
+++ b/src/sass/style.personal-cabinet.scss
@@ -4,4 +4,5 @@
 @import 'block/personal-cabinet/promo';
 @import 'block/personal-cabinet/info';
 @import 'block/personal-cabinet/content';
+@import 'block/personal-cabinet/transaction-history';
 @import 'base/footer';
