Made an 'Order History' tab

--- a/src/sass/style.personal-cabinet.scss
+++ b/src/sass/style.personal-cabinet.scss
@@ -5,4 +5,5 @@
 @import 'block/personal-cabinet/info';
 @import 'block/personal-cabinet/content';
 @import 'block/personal-cabinet/transaction-history';
+@import 'block/personal-cabinet/order-history';
 @import 'base/footer';
