--- a/src/sass/block/personal-cabinet/_order-history.scss
+++ b/src/sass/block/personal-cabinet/_order-history.scss
@@ -92,6 +92,46 @@
             cursor: pointer;
             margin-left: 10px;
             display: inline;
+            position: relative;
+            &::before,
+            &::after {
+                position: absolute;
+                background-color: $first_color;
+            }
+            &::before {
+                content: 'Данные скопированы';
+                top: -300%;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 10;
+                width: 106px;
+                height: 45px;
+                display: none;
+                align-items: center;
+                justify-content: center;
+                font-family: 'Raleway';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 13px;
+                line-height: 14px;
+                color: $default_color;
+            }
+            &::after {
+                content: '';
+                width: 15px;
+                height: 15px;
+                display: none;
+                top: -100%;
+                left: 50%;
+                transform: translateX(-50%) rotate(45deg);
+                z-index: 9;
+            }
+            &_active {
+                &::before,
+                &::after {
+                    display: flex;
+                }
+            }
         }
         svg {
             vertical-align: middle;
