--- a/src/sass/block/personal-cabinet/_content.scss
+++ b/src/sass/block/personal-cabinet/_content.scss
@@ -89,3 +89,46 @@
         }
     }
 }
+
+@media (max-width: 1355px) {
+    .content {
+        margin: 0 25px;
+        width: auto;
+    }
+    .content__container:last-child {
+        width: 845px;
+    }
+}
+@media (max-width: 1125px) {
+    .content__container:last-child {
+        width: auto;
+    }
+    .content__tabs {
+        display: flex;
+        justify-content: end;
+    }
+    .content__tab {
+        width: 600px;
+        overflow-x: scroll;
+    }
+}
+@media (max-width: 890px) {
+    .content {
+        height: 800px;
+        flex-direction: column;
+        justify-content: normal;
+        gap: 25px;
+    }
+    .content__tabs {
+        justify-content: start;
+    }
+}
+
+@media (max-width: 630px) {
+    .content {
+        margin: 0 10px;
+    }
+    .content__tab {
+        width: 100%;
+    }
+}
