--- a/src/sass/block/login/_promo.scss
+++ b/src/sass/block/login/_promo.scss
@@ -21,10 +21,8 @@
             letter-spacing: 0.02em;
             color: $fourth_color;
         }
-        img {
+        svg {
             margin: 0 8px;
-            width: 12px;
-            height: 10px;
         }
     }
 }
