--- a/src/sass/block/one-news/_promo.scss
+++ b/src/sass/block/one-news/_promo.scss
@@ -10,10 +10,8 @@
         line-height: 16px;
         letter-spacing: 0.02em;
         color: $fourth_color;
-        img {
+        svg {
             margin: 0 4px;
-            width: 12px;
-            height: 10px;
         }
     }
 
