Made a tab to change the contact information

--- a/src/sass/style.personal-cabinet.scss
+++ b/src/sass/style.personal-cabinet.scss
@@ -6,5 +6,6 @@
 @import 'block/personal-cabinet/content';
 @import 'block/personal-cabinet/transaction-history';
 @import 'block/personal-cabinet/order-history';
+@import 'block/personal-cabinet/contact-details';
 @import 'block/personal-cabinet/password';
 @import 'base/footer';
