--- a/src/sass/style.basket.scss
+++ b/src/sass/style.basket.scss
@@ -3,4 +3,5 @@
 @import 'base/header';
 @import 'block/basket/promo';
 @import 'block/basket/basket';
+@import 'block/basket/info';
 @import 'base/footer';
