--- a/src/sass/block/basket/_promo.scss
+++ b/src/sass/block/basket/_promo.scss
@@ -27,6 +27,48 @@
             height: 10px;
         }
     }
+
+    &__main {
+        padding-top: 60px;
+        padding-bottom: 40px;
+        display: flex;
+    }
+
+    &__title {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 32px;
+        line-height: 32px;
+        letter-spacing: 0.01em;
+        color: $third_color;
+    }
+
+    &__manager {
+        margin-left: 190px;
+    }
+
+    &__manager-title {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 32px;
+        letter-spacing: -0.009em;
+        color: $third_color;
+    }
+
+    &__manager-link {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        letter-spacing: 0.01em;
+        color: $first_color;
+        svg {
+            margin-right: 4px;
+        }
+    }
 }
 @media (max-width: 1355px) {
     .promo {
