--- a/src/sass/block/basket/_info.scss
+++ b/src/sass/block/basket/_info.scss
@@ -59,3 +59,21 @@
         display: none;
     }
 }
+@media (max-width: 630px) {
+    .info {
+        &__title {
+            margin: 0 10px;
+        }
+    }
+}
+@media (max-width: 425px) {
+    .info {
+        &__wrapper {
+            margin-left: 10px;
+            margin-right: 10px;
+            width: auto;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
