Made the layout of the 'Address details' tab

--- a/src/sass/style.personal-cabinet.scss
+++ b/src/sass/style.personal-cabinet.scss
@@ -8,4 +8,5 @@
 @import 'block/personal-cabinet/order-history';
 @import 'block/personal-cabinet/contact-details';
 @import 'block/personal-cabinet/password';
+@import 'block/personal-cabinet/address';
 @import 'base/footer';
