--- a/src/sass/block/personal-cabinet/_address.scss
+++ b/src/sass/block/personal-cabinet/_address.scss
@@ -3,7 +3,6 @@
 }
 .address {
     &__fop {
-        display: none;
     }
 
     &__corp {
@@ -103,6 +102,10 @@
             background-color: $default_color;
             color: $first_color;
         }
+    }
+
+    &_hide {
+        display: none !important;
     }
 }
 .select {
