--- a/src/sass/block/ordering/_ordering.scss
+++ b/src/sass/block/ordering/_ordering.scss
@@ -37,6 +37,7 @@
                 margin-top: 0;
             }
             &:focus {
+                border-color: $first_color;
             }
         }
     }
@@ -47,8 +48,10 @@
         flex-direction: column;
     }
 
-    &__corp {
-        display: none;
+    &__delivery {
+        display: flex;
+        flex-direction: column;
+        border: none;
     }
 
     &__radio {
@@ -60,15 +63,8 @@
         }
     }
 
-    #novaPoshta {
-        &:checked {
-            .address {
-                display: flex !important;
-            }
-        }
-    }
-
     &__label {
+        position: relative;
         margin-top: 15px;
         font-family: 'Montserrat';
         font-weight: 500;
@@ -78,6 +74,7 @@
         display: inline-flex;
         align-items: center;
         user-select: none;
+        cursor: pointer;
         &::before {
             content: '';
             margin-right: 10px;
@@ -91,6 +88,17 @@
         &:nth-child(1),
         &:nth-child(4) {
             margin-top: 0;
+        }
+        &:nth-child(3) {
+            &::after {
+                content: url('@img/stickers/free.png');
+                position: absolute;
+                top: 50%;
+                transform: translateX(-50%);
+                width: 50px;
+                height: 25px;
+                z-index: 2;
+            }
         }
     }
 
@@ -115,9 +123,16 @@
             color: $first_color;
         }
     }
+
+    &_hide {
+        display: none !important;
+    }
 }
 .address {
+    margin-top: 18px;
     display: none;
+    flex-direction: column;
+    gap: 15px;
     &__country,
     &__region {
         position: relative;
@@ -129,9 +144,31 @@
             bottom: 0;
         }
     }
+
+    &_show {
+        display: flex !important;
+    }
 }
 #address {
     display: none;
+    margin-top: 16px;
+    padding-left: 15px;
+    width: 100%;
+    height: 47px;
+    cursor: pointer;
+    border: 0.5px solid rgba(0, 0, 0, 0.15);
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: $third_color;
+    transition: all 0.2s;
+    &:hover {
+        background-color: rgba(51, 125, 90, 0.1);
+    }
+    &:focus {
+        border-color: $first_color;
+    }
 }
 .select {
     &__input {
@@ -148,7 +185,6 @@
         cursor: pointer;
         border: 0.5px solid rgba(0, 0, 0, 0.15);
         font-family: 'Montserrat';
-        font-style: normal;
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
