--- a/src/sass/block/ordering/_ordering.scss
+++ b/src/sass/block/ordering/_ordering.scss
@@ -85,20 +85,13 @@
             outline: 2px solid $first_color;
             border-radius: 50%;
         }
-        &:nth-child(1),
-        &:nth-child(4) {
+        &:nth-of-type(1) {
             margin-top: 0;
         }
-        &:nth-child(3) {
-            &::after {
-                content: url('@img/stickers/free.png');
-                position: absolute;
-                top: 50%;
-                transform: translateX(-50%);
-                width: 50px;
-                height: 25px;
-                z-index: 2;
-            }
+        img {
+            margin-left: 10px;
+            width: 96px;
+            height: 32px;
         }
     }
 
@@ -250,6 +243,27 @@
         }
         &:hover {
             background-color: rgba(51, 125, 90, 0.1);
+        }
+    }
+}
+
+@media (max-width: 1355px) {
+    .ordering {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: auto;
+    }
+}
+@media (max-width: 535px) {
+    .ordering {
+        margin-left: 10px;
+        margin-right: 10px;
+        &__form {
+            width: auto;
+        }
+        &__btn {
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
