--- a/src/sass/block/ordering/_promo.scss
+++ b/src/sass/block/ordering/_promo.scss
@@ -75,6 +75,10 @@
             margin: 0 33px;
             width: auto;
         }
+        &__main {
+            margin: 0 25px;
+            width: auto;
+        }
     }
 }
 @media (max-width: 1200px) {
@@ -82,6 +86,17 @@
         &__wrapper {
             margin: 0 25px;
             width: auto;
+        }
+    }
+}
+@media (max-width: 768px) {
+    .promo {
+        &__main {
+            flex-direction: column;
+            gap: 25px;
+        }
+        &__manager {
+            margin-left: 0;
         }
     }
 }
@@ -103,6 +118,9 @@
     .promo {
         &__main {
             align-items: center;
+        }
+        &__title {
+            text-align: center;
         }
         &__manager-title {
             display: none;
