--- a/src/sass/base/_mini-news.scss
+++ b/src/sass/base/_mini-news.scss
@@ -120,14 +120,24 @@
         font-size: 14px;
         line-height: 20px;
         letter-spacing: 0.01em;
-        color: $first_color;
+        color: $third_color;
         transition: all 0.2s;
+        &:hover {
+            color: $first_color;
+            .mini-news__link-img {
+                svg{
+                    fill: $first_color;
+                }
+            }
+        }
     }
 
     &__link-img {
         margin-left: 8px;
-        width: 18px;
-        height: 9px;
+        svg {
+            fill: $third_color;
+            transition: all .2s;
+        }
     }
 
     &__btn {
