--- a/src/sass/block/news/_news.scss
+++ b/src/sass/block/news/_news.scss
@@ -146,11 +146,18 @@
         transition: all 0.2s;
         &-img {
             margin-left: 9px;
-            width: 18px;
-            height: 9px;
+            svg {
+                fill: $third_color;
+                transition: all 0.2s;
+            }
         }
         &:hover {
             color: $first_color;
+            .main-news__article-link-img {
+                svg {
+                    fill: $first_color;
+                }
+            }
         }
     }
 }
