--- a/src/sass/block/personal-cabinet/_address.scss
+++ b/src/sass/block/personal-cabinet/_address.scss
@@ -1,8 +1,6 @@
-.content {
-    height: 1000px !important;
-}
 .address {
     &__fop {
+        display: flex;
     }
 
     &__corp {
@@ -212,7 +210,12 @@
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
         z-index: -1;
+        img {
+            object-fit: cover;
+        }
     }
     &__title {
         font-family: 'Raleway';
@@ -233,5 +236,39 @@
         text-align: center;
         letter-spacing: 0.01em;
         color: $default_color;
+    }
+}
+
+@media (max-width: 1355px) {
+    .address__corp {
+        gap: 25px;
+    }
+}
+@media (max-width: 1125px) {
+    .aside {
+        width: 250px;
+    }
+    .aside__title {
+        margin: 0 10px;
+        width: 100%;
+        font-size: 22px;
+        line-height: normal;
+    }
+    .aside__subtitle {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 100%;
+        font-size: 18px;
+    }
+}
+@media (max-width: 630px) {
+    .address__fop {
+        justify-content: center;
+    }
+    .address__corp {
+        justify-content: center;
+    }
+    .aside {
+        display: none;
     }
 }
