--- a/src/sass/block/personal-cabinet/_content.scss
+++ b/src/sass/block/personal-cabinet/_content.scss
@@ -80,13 +80,15 @@
     }
     &__tab {
         width: 100%;
-        position: absolute;
+        /* position: absolute;
         z-index: -10;
-        opacity: 0;
+        opacity: 0; */
+        display: none;
         transition: all 0.1s;
         &_active {
-            z-index: 1 !important;
-            opacity: 1 !important;
+            /* z-index: 1 !important;
+            opacity: 1 !important; */
+            display: block;
         }
     }
 }
@@ -115,7 +117,6 @@
 }
 @media (max-width: 890px) {
     .content {
-        height: 800px;
         flex-direction: column;
         justify-content: normal;
         gap: 25px;
