--- a/src/sass/block/registration/_registration.scss
+++ b/src/sass/block/registration/_registration.scss
@@ -263,6 +263,7 @@
         }
     }
     &__label-text {
+        margin-top: 12px;
         padding-bottom: 3px;
         border-bottom: 1.5px dashed #ffffff;
         font-family: 'Montserrat';
