--- a/src/sass/style.one-news.scss
+++ b/src/sass/style.one-news.scss
@@ -4,3 +4,9 @@
 @import 'block/one-news/promo';
 @import 'block/one-news/news';
 @import 'base/footer';
+.footer__container {
+    padding-top: 97px;
+}
+.footer_dark {
+    padding-bottom: 51px;
+}
