--- a/src/sass/style.registration.scss
+++ b/src/sass/style.registration.scss
@@ -5,3 +5,6 @@
 @import 'block/registration/registration';
 @import 'block/registration/select';
 @import 'base/footer';
+.footer__navigation {
+    margin-top: 44px;
+}
