--- a/src/sass/block/one-news/_news.scss
+++ b/src/sass/block/one-news/_news.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
 
     &__main {
-        width: 990px;
+        width: 996px;
     }
 
     &__title {
@@ -31,6 +31,7 @@
     }
 
     &__img {
+        padding-right: 6px;
         margin-top: 30px;
         width: 100%;
         height: 595px;
@@ -43,15 +44,30 @@
     }
 
     &__text {
+        padding-right: 4px;
         margin-top: 28px;
         font-family: 'Raleway';
         font-weight: 500;
         font-size: 15.6px;
-        line-height: 23px;
-        letter-spacing: 0.01em;
+        line-height: 25px;
         color: $third_color;
+        &:nth-of-type(2) {
+            margin-top: 30px;
+        }
         &:last-of-type {
             margin-top: 23px;
+        }
+        span {
+            display: block;
+            margin-top: 10px;
+            &:nth-child(2) {
+                margin-top: 12px;
+                letter-spacing: 0.006em;
+            }
+            &:last-child {
+                margin-top: 13px;
+                letter-spacing: 0.006em;
+            }
         }
     }
 
@@ -63,12 +79,12 @@
         font-size: 24px;
         line-height: 28px;
         &:last-of-type {
-            margin-top: 35px;
+            margin-top: 26px;
         }
     }
 
     &__list {
-        margin-top: 25px;
+        margin-top: 18px;
     }
 
     &__list-title {
@@ -82,7 +98,7 @@
     }
 
     &__list-group {
-        margin-top: 6px;
+        margin-top: 10px;
         padding-left: 18px;
         list-style: disc;
     }
@@ -98,7 +114,13 @@
         &::marker {
             color: $first_color;
         }
+        &:not(&:first-child) {
+            margin-top: 3px;
+        }
     }
+}
+body > section.news > div > div:nth-child(10) > span:nth-child(2) {
+    line-height: 24px;
 }
 .aside {
     margin-top: 128px;
@@ -229,6 +251,10 @@
             height: 16px;
         }
     }
+}
+
+body > section.news > div > div:nth-child(6) {
+    margin-top: 24px;
 }
 
 @media (max-width: 1355px) {
