--- a/src/sass/style.about-company.scss
+++ b/src/sass/style.about-company.scss
@@ -7,7 +7,40 @@
 }
 .about-manufacturer__subtitle {
     margin-top: 45px !important;
-    line-height: 25px !important;
+    line-height: 24px !important;
+}
+.about-manufacturer__subtitle-text-second {
+    margin-top: 33px;
+}
+.info__subtitle {
+    margin-top: 20px !important;
+}
+.eco {
+    padding-bottom: 238px !important;
+}
+.eco__img {
+    margin-top: 32px !important;
+}
+.eco__title {
+    margin-top: 41px !important;
+}
+.eco__subtitle {
+    margin-top: 13px !important;
+    line-height: 32px !important;
+}
+.mini-news__navigation {
+    margin-top: 17px !important;
+}
+.mini-news__btn {
+    margin-top: 68px !important;
+}
+.gallery__group-wrapper {
+    &:nth-of-type(2) {
+        top: 46% !important;
+    }
+}
+body > section.gallery > div > div.gallery__group > div:nth-child(3) > div:nth-child(3) > div.gallery__group-wrapper {
+    top: 46% !important;
 }
 @import 'base/about-manufacture';
 @import 'block/about-company/founder';
