--- a/src/sass/style.basket.scss
+++ b/src/sass/style.basket.scss
@@ -5,3 +5,6 @@
 @import 'block/basket/basket';
 @import 'block/basket/info';
 @import 'base/footer';
+.footer__navigation {
+    margin-top: 42px;
+}
