--- a/src/sass/style.recover-password.scss
+++ b/src/sass/style.recover-password.scss
@@ -4,3 +4,6 @@
 @import 'block/recover-password/promo';
 @import 'block/recover-password/main';
 @import 'base/footer';
+.footer__navigation {
+    margin-top: 44px;
+}
