--- a/src/sass/block/order/_order.scss
+++ b/src/sass/block/order/_order.scss
@@ -19,8 +19,21 @@
         font-weight: 700;
         font-size: 16px;
         line-height: 32px;
-        text-align: center;
+        text-align: left;
         color: $third_color;
+        &:first-child {
+            padding-left: 25px;
+        }
+        &:nth-child(2) {
+            padding-left: 195px;
+        }
+        &:nth-child(3) {
+            padding-left: 100px;
+        }
+        &:nth-child(4) {
+            text-align: right;
+            padding-right: 29px;
+        }
     }
 
     &__body {
@@ -40,7 +53,20 @@
         font-weight: 500;
         font-size: 14px;
         line-height: 32px;
-        text-align: center;
+        text-align: left;
+        &:first-child {
+            padding-left: 25px;
+        }
+        &:nth-child(2) {
+            padding-left: 53px;
+        }
+        &:nth-child(3) {
+            padding-left: 133px;
+        }
+        &:nth-child(4) {
+            text-align: right;
+            padding-right: 89px;
+        }
     }
 
     &__count {
@@ -97,7 +123,7 @@
     }
 }
 .action {
-    padding-top: 30px;
+    padding-top: 24px;
     margin: 0 auto;
     width: 1290px;
     display: flex;
