--- a/src/sass/block/ordering/_ordering.scss
+++ b/src/sass/block/ordering/_ordering.scss
@@ -9,7 +9,8 @@
     }
 
     &__title {
-        margin-bottom: 30px;
+        padding-left: 2px;
+        margin-bottom: 23px;
         font-family: 'Montserrat';
         font-weight: 700;
         font-size: 17px;
@@ -18,6 +19,7 @@
         color: $third_color;
         &:not(&:first-child) {
             margin-top: 45px;
+            margin-bottom: 16px;
         }
     }
 
@@ -57,6 +59,7 @@
         display: flex;
         flex-direction: column;
         border: none;
+        padding-left: 3px;
     }
 
     &__radio {
@@ -101,7 +104,8 @@
     }
 
     &__btn {
-        margin-top: 36px;
+        margin-left: 3px;
+        margin-top: 33px;
         width: 249px;
         height: 50px;
         display: flex;
@@ -149,7 +153,7 @@
 }
 #address {
     display: none;
-    margin-top: 16px;
+    margin-top: 8px;
     padding-left: 15px;
     width: 100%;
     height: 47px;
