--- a/src/sass/block/recover-password/_main.scss
+++ b/src/sass/block/recover-password/_main.scss
@@ -12,14 +12,17 @@
         color: $third_color;
     }
     &__subtitle {
+        padding-left: 3px;
         margin-top: 22px;
         font-family: 'Raleway';
         font-weight: 600;
         font-size: 18px;
         line-height: 32px;
-        letter-spacing: 0.01em;
         text-align: center;
         color: $third_color;
+        svg {
+            margin-right: 5px;
+        }
     }
 
     &__descr {
@@ -81,6 +84,7 @@
     margin: 0 auto;
     width: 410px;
     &__title {
+        padding-left: 3px;
         margin-top: 45px;
         font-family: 'Raleway';
         font-weight: 600;
@@ -89,6 +93,9 @@
         letter-spacing: 0.01em;
         text-align: center;
         color: $third_color;
+        svg {
+            margin-right: 5px;
+        }
     }
 
     &__subtitle {
